--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -16,7 +16,7 @@ tracing = "0.1"
 mint = { version = "0.5", features = ["serde"] }
 rand = "0.8"
 
-bevy_ecs = "0.11.3"
+bevy_ecs = { path = "../../bevy-fork/crates/bevy_ecs/" }
 
 [dev-dependencies]
 tracing-subscriber = "0.3"
