--- a/robot/Cargo.toml
+++ b/robot/Cargo.toml
@@ -26,6 +26,5 @@ serde = { version = "1", features = ["derive"]}
 csv = "1.2"
 crossbeam = "0.8"
 bitflags = "1"
-paste = "1.0"
-fxhash = "0.2"
+ahash = "0.8"
 ctrlc = "3"
