Work on data model

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+motor_math = { path = "../motor_math" }
+
 networking = { path = "../networking" }
 glam = { version = "0.23", features = ["serde", "mint"] }
 serde = { version = "1", features = ["derive", "rc"] }
