--- a/robot/Cargo.toml
+++ b/robot/Cargo.toml
@@ -6,26 +6,24 @@ edition = "2021"
 [dependencies]
 common = { path = "../common" }
 networking = { path = "../networking" }
+motor_math = { path = "../motor_math" }
 
-bevy= { path = "../../bevy-fork/", default-features = false, features = ["multi-threaded"] }
+bevy = { path = "../../bevy-fork/", default-features = false, features = ["multi-threaded"] }
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
-rppal = { version = "0.14", features = ["hal"] }
+rppal = { version = "0.15", features = ["hal"] }
 rgb = "0.8"
 
-sysinfo = { version = "0.28", default-features = false }
+sysinfo = { version = "0.29", default-features = false }
 
-ahrs = "0.6.0"
-nalgebra = { version = "0.31", features = ["mint"] }
-glam = { version = "0.23", features = ["serde", "mint"] }
-mint = "0.5"
+ahrs = { git = "https://github.com/jmagnuson/ahrs-rs.git" }
+nalgebra = { version = "0.32", features = ["convert-glam024"] }
+glam = { version = "0.24", features = ["serde"] }
 
 anyhow = "1"
 serde = { version = "1", features = ["derive"]}
-csv = "1.2"
 crossbeam = "0.8"
-bitflags = "1"
 ahash = "0.8"
 ctrlc = "3"
