--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -18,4 +18,5 @@ tracing = "0.1"
 rand = "0.8"
 ahash = "0.8"
 
-bevy_ecs = { path = "../../bevy-fork/crates/bevy_ecs/" }
+bevy_app = "0.12"
+bevy_ecs = "0.12"
