--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -18,5 +18,4 @@ tracing = "0.1"
 rand = "0.8"
 ahash = "0.8"
 
-bevy_app = "0.12"
-bevy_ecs = "0.12"
+bevy = { version = "0.12" , default-features = false }
