Bug fixes from first integration test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 resolver = "2"
 members = [
     "robot",
-    # "surface",
-    "runner-rpi",
+    "surface",
     "common",
     "networking",
     "motor_math",
