--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,7 @@
 [build]
 rustflags = ["-Z", "threads=16"]
+
+[target.aarch64-unknown-linux-gnu]
+# linker = "aarch64-unknown-linux-gnu-gcc"
+linker = "aarch64-none-linux-gnu-gcc"
+runner = "./rpi-runner.sh"
