--- a/surface/Cargo.toml
+++ b/surface/Cargo.toml
@@ -8,10 +8,11 @@ common = { path = "../common" }
 networking = { path = "../networking" }
 # motor_math = { path = "../motor_math" }
 
-bevy = { version = "0.12", features = ["wayland", "dynamic_linking"] }
-egui = "0.21"
-egui_extras = "0.21"
-bevy_egui = { version = "0.20", default-features = false }
+bevy = { version = "0.12", features = ["wayland"] }
+egui = "0.23"
+egui_extras = "0.23"
+bevy_egui = { version = "0.23", default-features = false }
+bevy-inspector-egui = "0.21"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
