--- a/surface/Cargo.toml
+++ b/surface/Cargo.toml
@@ -14,6 +14,7 @@ egui_extras = "0.23"
 bevy_egui = { version = "0.23", default-features = false }
 bevy-inspector-egui = "0.21"
 leafwing-input-manager = "0.11"
+bevy_panorbit_camera = "0.9"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
