--- a/robot/robot.toml
+++ b/robot/robot.toml
@@ -27,3 +27,4 @@ BackLeftBottom = 7
 
 [cameras."/dev/video2"]
 name = "Front"
+transform = { translation = [0.0, 0.0, -1.0], rotation = [0.0, 0.0, 0.0, 1.0], scale = [1.0, 1.0, 1.0]}
