--- a/surface/Cargo.toml
+++ b/surface/Cargo.toml
@@ -15,6 +15,7 @@ bevy_egui = { version = "0.23", default-features = false }
 bevy-inspector-egui = "0.21"
 leafwing-input-manager = "0.11"
 bevy_panorbit_camera = "0.9"
+bevy_oxr = { git = "https://github.com/awtterpip/bevy_oxr.git" }
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
@@ -30,3 +31,4 @@ opencv = "0.88"
 # *brings in all of tokio for a single function*
 tokio = { version = "1.35", features = ["full"] }
 bevy-tokio-tasks = { git = "https://github.com/foxzool/bevy-tokio-tasks.git" }
+
