--- a/robot/robot.toml
+++ b/robot/robot.toml
@@ -28,3 +28,7 @@ BackLeftBottom = 7
 [cameras."/dev/video2"]
 name = "Front"
 transform = { position = { x = 0.0, y = 1.0, z = 0.0 }, rotation = { yaw = 0.0, pitch = 0.0, roll = 0.0 }}
+
+[cameras."/dev/video6"]
+name = "Top"
+transform = { position = { x = 0.0, y = 0.0, z = 1.0 }, rotation = { yaw = 0.0, pitch = -90.0, roll = 0.0 }}
