--- a/robot/Cargo.toml
+++ b/robot/Cargo.toml
@@ -8,19 +8,20 @@ common = { path = "../common" }
 networking = { path = "../networking" }
 motor_math = { path = "../motor_math" }
 
-bevy = { version = "0.12" , default-features = false, features = ["multi-threaded"] }
+bevy = { version = "0.13" , default-features = false, features = ["multi-threaded"] }
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
-rppal = { version = "0.15", features = ["hal"] }
+rppal = { version = "0.17", features = ["hal"] }
 rgb = "0.8"
 
+# Version 30 is avaible
 sysinfo = { version = "0.29", default-features = false }
 
 ahrs = { git = "https://github.com/jmagnuson/ahrs-rs.git" }
-nalgebra = { version = "0.32", features = ["convert-glam024"] }
-glam = { version = "0.24", features = ["serde"] }
+nalgebra = { version = "0.32", features = ["convert-glam025"] }
+glam = { version = "0.25", features = ["serde"] }
 
 anyhow = "1"
 serde = { version = "1", features = ["derive"]}
