--- a/surface/Cargo.toml
+++ b/surface/Cargo.toml
@@ -8,13 +8,13 @@ common = { path = "../common" }
 networking = { path = "../networking" }
 motor_math = { path = "../motor_math" }
 
-bevy = { version = "0.12", features = ["wayland", "dynamic_linking"] }
-egui = "0.23"
-egui_extras = "0.23"
-bevy_egui = { version = "0.23", default-features = false }
-bevy-inspector-egui = "0.21"
-leafwing-input-manager = "0.11"
-bevy_panorbit_camera = "0.9"
+bevy = { version = "0.13", features = ["wayland", "dynamic_linking"] }
+egui = "0.26"
+egui_extras = "0.26"
+bevy_egui = { version = "0.25", default-features = false }
+bevy-inspector-egui = "0.23"
+leafwing-input-manager = "0.13"
+bevy_panorbit_camera = "0.16"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
@@ -96,8 +96,8 @@ opencv = { version = "0.88", default-features = false, features = [
 ] }
 
 # *brings in all of tokio for a single function*
-tokio = { version = "1.35", features = ["full"] }
-bevy-tokio-tasks = { git = "https://github.com/foxzool/bevy-tokio-tasks.git", rev = "b12e1d0867c05a0238eccdde361e01e3ac66d399" }
+tokio = { version = "1", features = ["full"] }
+bevy-tokio-tasks = { git = "https://github.com/foxzool/bevy-tokio-tasks.git" }
 
 [features]
 tracy = ["bevy/trace_tracy"]
