--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,12 +5,16 @@ edition = "2021"
 
 [dependencies]
 motor_math = { path = "../motor_math" }
-
 networking = { path = "../networking" }
+
 glam = { version = "0.25", features = ["serde"] }
 serde = { version = "1", features = ["derive", "rc"] }
 bincode = "1"
 crossbeam = "0.8"
+
+mdns-sd = "0.10"
+hostname = "0.3"
+flume = "0.11"
 
 anyhow = "1"
 thiserror = "1"
