--- a/robot/robot.toml
+++ b/robot/robot.toml
@@ -1,7 +1,7 @@
 name = "Dark Shark"
 port = 44445
 motor_amperage_budget = 15.0
-max_jerk = 30.0
+jerk_limit = 30.0
 
 # This is dummy data
 [motor_config.X3d.seed_motor]
