--- a/surface/Cargo.toml
+++ b/surface/Cargo.toml
@@ -9,18 +9,19 @@ networking = { path = "../networking" }
 motor_math = { path = "../motor_math" }
 
 bevy = { version = "0.13", features = ["wayland", "dynamic_linking"] }
-egui = "0.26"
-egui_extras = "0.26"
-bevy_egui = { version = "0.25", default-features = false }
-bevy-inspector-egui = "0.23"
+egui = "0.27"
+egui_extras = "0.27"
+bevy_egui = { version = "0.27", default-features = false }
+bevy-inspector-egui = "0.24"
 leafwing-input-manager = "0.13"
-bevy_panorbit_camera = "0.16"
+bevy_panorbit_camera = "0.18"
+bevy_mod_picking = "0.18"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
 anyhow = "1"
-serde = { version = "1", features = ["derive"]}
+serde = { version = "1", features = ["derive"] }
 toml = "0.8"
 crossbeam = "0.8"
 ahash = "0.8"
